Minor performance optimization inside the rendering loop.